# mcp-omnicommand

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README_EN.md  mcp_test.txt  mcp_test_dummy.txt
src/: cli.rs  main.rs  server.rs
src/process/: mod.rs
src/tools/: code_outline.rs  fetch_api.rs  find_file.rs  git_operations.rs  list_directory.rs  mod.rs  process_cleanup.rs  process_kill.rs  process_list.rs  run_command.rs  system_info.rs  tail_file.rs  wait_for.rs
