[package]
name = "omnicommand"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "omnicommand"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
futures = "0.3.32"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.2"
tokio = { version = "1.49.0", features = ["full"] }
tower-lsp = "0.20.0"
