[package]
name = "omnicommand"
version = "1.1.0"
edition = "2024"
license = "MIT"


[[bin]]
name = "omnicommand"
path = "src/main.rs"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
redundant_clone = "deny"
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
absolute_paths = "deny"

[dependencies]
base64 = "0.22.1"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.2"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
regex = "1.11.1"
ignore = "0.4.23"
glob = "0.3.1"


[profile.dev]
opt-level = 3
debug = false
lto = false
incremental = true

[profile.release]
lto = false
incremental = true
opt-level = 3
